# pphc

./: .gitignore  BUILDING.md  CLAUDE.md  CMakeLists.txt  README.md  build-android.sh  build-wasm.sh
android/: README.md
android/jni/: pph_jni.c
android/src/main/java/com/openpajak/pph/: PPH21Calculator.java  PPHCalculator.java  PPHMoney.java
android/src/main/kotlin/com/openpajak/pph/: PPHCalculatorKt.kt
cli/: CMakeLists.txt
cli/src/: main.c
cmake/: AndroidConfig.cmake  AppleFramework.cmake  CompilerDetection.cmake  EmscriptenConfig.cmake  PlatformConfig.cmake
examples/: CMakeLists.txt  custom_allocator.c  example_250m_with_bonuses.c
grabbers/: token_grabber.py
libpph/: CMakeLists.txt
libpph/include/pph/: pph_calculator.h  pph_export.h  pph_types.h
libpph/resources/: Info.plist.in  version.rc
libpph/src/: pph21.c  pph22.c  pph23.c  pph4_2.c  pph_breakdown.c  pph_constants.c  pph_money.c  ppn.c  ppnbm.c
libpph/tests/: CMakeLists.txt  test_common.h  test_money.c  test_pph21.c
wasm/: README.md  example.html  package.json  pph-wrapper.d.ts  pph-wrapper.js
win32/: CMakeLists.txt
win32/include/: pphcalc.h
win32/src/: formatting.c  pph_w32_const.c
